# customer-segmentation-rag-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  etl.py  features.py  personalization.py  pyproject.toml  requirements.txt  segmentation.py
.github/workflows/: ci.yml
data/: README.md
frontend/: api_client.py  app.py  charts.py  path_setup.py
frontend/pages/: 1_Segment_Overview.py  2_Recommendations.py  3_Analyst_Chat.py
rag/: build_cards.py  embed_store.py  rag_chain.py
scripts/: filter_cursor_coauthor.py  run_pipeline.sh
src/shopper_segmentation/: __init__.py  artifacts.py  etl.py  features.py  logging_config.py  paths.py  personalization.py  schema.py  segmentation.py
src/shopper_segmentation/api/: app.py  auth.py  sessions.py
src/shopper_segmentation/rag/: __init__.py  build_cards.py  embed_store.py  rag_chain.py  tools.py  vectorstore.py
src/shopper_segmentation/rag/agent/: graph.py  nodes.py  prompts.py  state.py
src/shopper_segmentation/rag/evals/: eval_dataset.py  run_eval.py
src/shopper_segmentation/resources/sample_output/: segment_profiles.json  segment_recommendations.json  uplift_report.json
tests/: conftest.py  test_agent_graph.py  test_app.py  test_artifacts.py  test_chat_stream_client.py  test_etl.py  test_features.py  test_personalization.py  test_pipeline_integration.py  test_rag.py  test_vectorstore.py
tests/fixtures/: generate_fixtures.py  generate_sample_artifacts.py
