[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shopper-segmentation"
version = "1.0.0"
description = "Shopper segmentation and personalization engine for dunnhumby Complete Journey"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "tabulate>=0.9.0",
    "groq>=0.9.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "streamlit>=1.38.0",
    "plotly>=5.22.0",
    "slowapi>=0.1.9",
    "cachetools>=5.5.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langsmith>=0.1.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pip-tools>=7.4.0",
    "pip-audit>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shopper_segmentation"]

[tool.hatch.build.targets.wheel.force-include]
"src/shopper_segmentation/resources" = "shopper_segmentation/resources"

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F541"]

[tool.ruff.lint.per-file-ignores]
"frontend/**" = ["E402"]
